idf_component_register(SRCS "main.c" "wifi.c" "status.c" "settings.c" "web.c"
      "mqtt.c" "temp_sensor.c" "trigger_sensor.c" "analog_sensor.c" "gps_module.cpp"
      "deps/ds18b20/ds18b20.c" "ntp.c" "deps/tinygps/tinygps.cpp" "commands.c"
      "distance_sensor.c" "camera.c" "motors.c"
      INCLUDE_DIRS ".")